port xr_body_teleoperation

--- a/ohrc_teleoperation/CMakeLists.txt
+++ b/ohrc_teleoperation/CMakeLists.txt
@@ -52,6 +52,31 @@ foreach(interface ${interfaces})
 endforeach(interface)
 
 
+
+set(state_topic_interfaces
+  # omega
+  xr_body
+)
+
+foreach(interface ${state_topic_interfaces})
+  add_executable(${interface}_teleoperation src/interface/${interface}_interface.cpp src/interface/state_topic_interface.cpp src/app/${interface}_teleoperation.cpp)
+
+  ament_target_dependencies(${interface}_teleoperation rclcpp ohrc_control ohrc_msgs ohrc_common interactive_markers visualization_msgs control_msgs geometry_msgs std_srvs tf2_kdl urdf tf2_eigen_kdl urdf)
+  
+  target_include_directories(${interface}_teleoperation
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+    )
+  target_link_libraries(${interface}_teleoperation OsqpEigen::OsqpEigen magic_enum::magic_enum )
+
+  install(TARGETS ${interface}_teleoperation
+  DESTINATION lib/${PROJECT_NAME}
+  )
+endforeach(interface)
+
+
+
 install(DIRECTORY
   launch
   DESTINATION share/${PROJECT_NAME}
